current state: fixed the sivualization + realization that the nodes get accessed weirdly -> also finished up the modified nodes and edges - they now get returned

--- a/rayIntersections/ray_shooting_mesh/ray_intersection.ipynb
+++ b/rayIntersections/ray_shooting_mesh/ray_intersection.ipynb
@@ -162,7 +162,7 @@
     "            img_pose = poses # camera to rescan 0\n",
     "        \n",
     "            extrinsic = np.linalg.inv(img_pose) #rescan to camera  1\n",
-    "            print(\"extrinsic\", extrinsic)\n",
+    "         \n",
     "            \n",
     "            if scan3r.is_rescan(data_dir, scan_id):\n",
     "                 #need to adjust the extrinsic matrix to the reference coordinate system\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
     "        global_id_img = global_id_imgs[frame_idx]\n",
     "        color_img = color_imgs[frame_idx]\n",
     "\n",
-    "        print(\"obje id image\" ,obj_id_img)\n",
+    "        \n",
     "        img_name = \"projection_pose_in_\"+ str(new_scan_id)+\"_\"+str(frame_idx)+\".jpg\"\n",
     "        obj_id_img_file = osp.join(save_scan_obj_dir, img_name)\n",
     "        global_img_file = osp.join(save_scan_global_dir, img_name)\n",
@@ -377,23 +377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 216,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "obje id image [[ 2  2  2 ...  1  1  1]\n",
-      " [ 2  2  2 ...  1  1  1]\n",
-      " [ 2  2  2 ...  1  1  1]\n",
-      " ...\n",
-      " [12 12 12 ...  1  1  1]\n",
-      " [12 12 12 ...  1  1  1]\n",
-      " [12 12 12 ...  1  1  1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "project_mesh_diff(data_dir, scenes_dir,curr_scan_id, new_scan_id, frame_number)"
    ]
@@ -454,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,13 +492,14 @@
     "\n",
     "    img_height, img_width, channels = pj_color.shape\n",
     "    #iterate through the whole image \n",
-    "    curr_res_color = np.full_like(gt_color, -1)\n",
-    "    curr_res_obj_id = np.full_like((img_height,img_width,1), -1)\n",
-    "    curr_res_global_id = np.full_like((img_height,img_width,1), -1)\n",
+    "    curr_res_color = np.full_like(gt_color, 0)\n",
+    "    curr_res_obj_id = np.full((img_height,img_width,1), 0)\n",
+    "    curr_res_global_id = np.full((img_height,img_width,1), 0)\n",
+    "   \n",
     "\n",
-    "    new_res_color = np.full_like(gt_color, -1)\n",
-    "    new_res_obj_id = np.full_like((img_height,img_width,1), -1)\n",
-    "    new_res_global_id = np.full_like((img_height,img_width,1), -1)\n",
+    "    new_res_color = np.full_like(gt_color, 0)\n",
+    "    new_res_obj_id = np.full((img_height,img_width,1), 0)\n",
+    "    new_res_global_id = np.full((img_height,img_width,1), 0)\n",
     "\n",
     "    #make the mask: originally black: wherever there is a difference take the value of the new_scan_id gt\n",
     "\n",
@@ -523,16 +510,16 @@
     "        for j in range(img_width):\n",
     "            if (pj_obj_id[i][j] != gt_obj_id[i][j]):\n",
     "                #the new values in the modified area\n",
-    "                new_res_color[i,j] = gt_color[i][j]\n",
-    "                new_res_obj_id[i,j] = gt_obj_id[i][j]\n",
-    "                new_res_global_id[i,j] = gt_global_id[i][j]\n",
+    "                new_res_color[i][j] = gt_color[i][j]\n",
+    "                new_res_obj_id[i][j] = gt_obj_id[i][j]\n",
+    "                new_res_global_id[i][j] = gt_global_id[i][j]\n",
     "\n",
     "                #the values which are impacted in curr \n",
-    "                curr_res_color[i,j] = pj_color[i][j]\n",
-    "                curr_res_obj_id[i,j] = pj_obj_id[i][j]\n",
-    "                curr_res_global_id[i,j] = pj_global_id[i][j]\n",
+    "                curr_res_color[i][j] = pj_color[i][j]\n",
+    "                curr_res_obj_id[i][j] = pj_obj_id[i][j]\n",
+    "                curr_res_global_id[i][j] = pj_global_id[i][j]\n",
     "\n",
-    "    print(\"new res_obj Id\", curr_res_obj_id)\n",
+    "\n",
     "    #also save the files as needed\n",
     "    #create directories (here tmp to try out & save \n",
     "    save_mask_color_dir = osp.join(data_dir, \"mask\", curr_scan_id, \"color\")\n",
@@ -574,35 +561,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 223,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "obje id image [[ 2  2  2 ...  1  1  1]\n",
-      " [ 2  2  2 ...  1  1  1]\n",
-      " [ 2  2  2 ...  1  1  1]\n",
-      " ...\n",
-      " [12 12 12 ...  1  1  1]\n",
-      " [12 12 12 ...  1  1  1]\n",
-      " [12 12 12 ...  1  1  1]]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 1-dimensional, but 2 were indexed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[199], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#computes the mask and shows the mask\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mget_transformation_mask\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscenes_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[198], line 65\u001b[0m, in \u001b[0;36mget_transformation_mask\u001b[0;34m(data_dir, scenes_dir, curr_scan_id, new_scan_id, frame_number)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (pj_obj_id[i][j] \u001b[38;5;241m!=\u001b[39m gt_obj_id[i][j]):\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;66;03m#the new values in the modified area\u001b[39;00m\n\u001b[1;32m     64\u001b[0m     new_res_color[i,j] \u001b[38;5;241m=\u001b[39m gt_color[i][j]\n\u001b[0;32m---> 65\u001b[0m     \u001b[43mnew_res_obj_id\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m gt_obj_id[i][j]\n\u001b[1;32m     66\u001b[0m     new_res_global_id[i,j] \u001b[38;5;241m=\u001b[39m gt_global_id[i][j]\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m#the values which are impacted in curr \u001b[39;00m\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#computes the mask and shows the mask\n",
     "get_transformation_mask(data_dir, scenes_dir,curr_scan_id, new_scan_id, frame_number)"
@@ -617,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,166 +596,90 @@
     "    change_obj_curr_path = os.path.join(data_dir, \"mask\", curr_scan_id, \"obj_id\",\"curr_val_mask_pose_in_\"+ str(new_scan_id)+\"_\"+str(frame_number)+\".jpg\")\n",
     "    change_global_curr_path = os.path.join(data_dir, \"mask\", curr_scan_id, \"global_id\",\"curr_val_mask_pose_in_\"+ str(new_scan_id)+\"_\"+str(frame_number)+\".jpg\")\n",
     "\n",
-    "\n",
-    "    #load the files and convert them to numpyys\n",
-    "    new_obj = cv2.imread(change_obj_new_path, cv2.IMREAD_UNCHANGED)\n",
-    "    new_obj = np.array(new_obj)\n",
-    "    print( \"new obj\", new_obj)\n",
-    "    new_global = cv2.imread(change_global_new_path, cv2.IMREAD_UNCHANGED)\n",
-    "    new_global = np.array(new_global)\n",
-    "    curr_obj = cv2.imread(change_obj_curr_path, cv2.IMREAD_UNCHANGED)\n",
-    "    curr_obj = np.array(curr_obj)\n",
-    "    curr_global = cv2.imread(change_global_curr_path, cv2.IMREAD_UNCHANGED)\n",
-    "    curr_global = np.array(curr_global)\n",
-    "\n",
-    "    #init the results we view as affected nodes everything which is changed since we assume a closed environment\n",
-    "    affected_curr_nodes = [] #object_id\n",
-    "    affected_curr_edges = []\n",
-    "\n",
-    "    affected_new_nodes = []\n",
-    "    affected_new_edges = []\n",
-    "\n",
-    "\n",
     "    #access the current edges and object id/ current ids for the tranlation\n",
     "    path = os.path.join(data_dir, \"files/orig/data/\" \"{}.pkl\".format(scan_id))\n",
     "    with open(path, 'rb') as file:\n",
     "        data = pickle.load(file)\n",
     "        print(\"Keys in the data dictionary:\", data.keys())\n",
+    "       \n",
     "\n",
+    "    obj2idx = data[\"object_id2idx\"]\n",
     "    edges = data[\"edges\"]\n",
     "    # obj_id = data[\"objects_id\"]\n",
     "    # global_id = data[\"global_objects_id\"]\n",
     "    # print(\"obj_id length\", len(obj_id), \"values\", obj_id)\n",
     "    # print(\"global_id length\", len(global_id), \"values\", global_id)\n",
     "\n",
-    "    img_height, img_width, channels = new_obj.shape\n",
-    "    for i in range(img_height):\n",
-    "        for j in range(img_width):\n",
-    "            #go only over the parts which have a change\n",
-    "            if new_global[i][j] != -1:\n",
-    "                #get the current of the frame\n",
-    "                affected_curr_nodes.append(curr_obj)\n",
-    "                affected_new_nodes.append(new_obj)\n",
     "\n",
-    "    #now based on affected nodes iterate once over the edges\n",
-    "    for ed in range(len(edges)):\n",
-    "        #visible in current frame and modified\n",
-    "        if ed[0] in affected_curr_nodes or ed[1] in affected_curr_nodes:\n",
-    "            affected_curr_edges.append(ed)\n",
-    "        #are new in the scene -> mus have come from somewhere not visible\n",
-    "        if ed[0] in affected_new_nodes or ed[1] in affected_new_nodes:\n",
-    "            affected_new_edges.append(ed)\n",
-    "\n",
-    "    return affected_curr_nodes, affected_curr_edges, affected_new_nodes, affected_new_edges\n",
+    "    #load the files and convert them to numpyys\n",
+    "    new_obj = cv2.imread(change_obj_new_path, cv2.IMREAD_UNCHANGED)\n",
+    "    new_obj = np.array(new_obj)\n",
+    "    new_obj = new_obj.flatten()\n",
+    "    nonzero_new_obj = new_obj[new_obj!= 0]\n",
+    "    #this are the unique nodes which are affected\n",
+    "    affected_new_nodes = np.unique(nonzero_new_obj)\n",
+    "    #since edge access is in index also translate it\n",
+    "    affected_new_nodes_idx =  [obj2idx[obj_id] for obj_id in affected_new_nodes if obj_id in obj2idx]\n",
+    "    # new_global = cv2.imread(change_global_new_path, cv2.IMREAD_UNCHANGED)\n",
+    "    # new_global = np.array(new_global)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    " \n",
-    "\n",
-    "\n",
+    "    curr_obj = cv2.imread(change_obj_curr_path, cv2.IMREAD_UNCHANGED)\n",
+    "    curr_obj = np.array(curr_obj)\n",
+    "    curr_obj = curr_obj.flatten()\n",
+    "    nonzero_curr_obj = new_obj[curr_obj!= 0]\n",
+    "    #this are the unique nodes which are affected\n",
+    "    affected_curr_nodes = np.unique(nonzero_curr_obj)\n",
+    "      #since edge access is in index also translateit\n",
+    "    affected_curr_nodes_idx =  [obj2idx[obj_id] for obj_id in affected_curr_nodes if obj_id in obj2idx]\n",
+    "    # curr_global = cv2.imread(change_global_curr_path, cv2.IMREAD_UNCHANGED)\n",
+    "    # curr_global = np.array(curr_global)\n",
     "\n",
     "\n",
     "\n",
+    "    affected_curr_edges_idx = [edge for edge in edges if edge[0] in affected_curr_nodes_idx or edge[1] in affected_curr_nodes_idx]\n",
+    "    affected_new_edges_idx = [edge for edge in edges if edge[0] in affected_new_nodes_idx or edge[1] in affected_new_nodes_idx]\n",
     "\n",
+    "    \n",
     "\n",
+    "    # img_height, img_width = new_obj.shape\n",
+    "    # for i in range(img_height):\n",
+    "    #     for j in range(img_width):\n",
+    "    #         #go only over the parts in curr which have a change\n",
+    "    #         if curr_obj[i][j] != 0:\n",
+    "    #             #get the current of the frame\n",
+    "    #             affected_curr_nodes.append(curr_obj[i][j])\n",
     "\n",
+    "    #         #go only over the parts in curr which have a change\n",
+    "    #         if new_obj[i][j] != 0:\n",
+    "    #             #get the current of the frame\n",
+    "    #             affected_new_nodes.append(new_obj[i][j])\n",
+    "    \n",
+    "               \n",
     "\n",
+    "    # #now based on affected nodes iterate once over the edges\n",
+    "    # for ed in edges:\n",
+    "    #     #visible in current frame and modified\n",
+    "    #     if ed[0] in affected_curr_nodes or ed[1] in affected_curr_nodes:\n",
+    "    #         affected_curr_edges.append(ed)\n",
+    "    #     #are new in the scene -> mus have come from somewhere not visible\n",
+    "    #     if ed[0] in affected_new_nodes or ed[1] in affected_new_nodes:\n",
+    "    #         affected_new_edges.append(ed)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n"
+    "    # return affected_curr_nodes, affected_curr_edges, affected_new_nodes, affected_new_edges\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape of obj_id [[2 2 2 ... 1 1 1]\n",
-      " [2 2 2 ... 1 1 1]\n",
-      " [2 2 2 ... 1 1 1]\n",
-      " ...\n",
-      " [2 2 2 ... 1 1 1]\n",
-      " [2 2 2 ... 1 1 1]\n",
-      " [2 2 2 ... 1 1 1]]\n",
-      "new obj [[[255 255 255]\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]\n",
-      "  ...\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]]\n",
-      "\n",
-      " [[255 255 255]\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]\n",
-      "  ...\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]]\n",
-      "\n",
-      " [[255 255 255]\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]\n",
-      "  ...\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[  2   2   2]\n",
-      "  [  2   2   2]\n",
-      "  [  2   2   2]\n",
-      "  ...\n",
-      "  [255 255 255]\n",
-      "  [255 255 255]\n",
-      "  [254 254 254]]\n",
-      "\n",
-      " [[  2   2   2]\n",
-      "  [  2   2   2]\n",
-      "  [  2   2   2]\n",
-      "  ...\n",
-      "  [254 254 254]\n",
-      "  [254 254 254]\n",
-      "  [255 255 255]]\n",
-      "\n",
-      " [[  2   2   2]\n",
-      "  [  2   2   2]\n",
-      "  [  2   2   2]\n",
-      "  ...\n",
-      "  [254 254 254]\n",
-      "  [252 252 252]\n",
-      "  [254 254 254]]]\n",
       "Keys in the data dictionary: dict_keys(['scan_id', 'objects_id', 'global_objects_id', 'objects_cat', 'triples', 'pairs', 'edges', 'obj_points', 'objects_count', 'edges_count', 'object_id2idx', 'object_attributes', 'edges_cat', 'rel_trans', 'root_obj_id', 'bounding_boxes', 'bow_vec_object_attr_feats', 'bow_vec_object_edge_feats'])\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[175], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpotential_nodes_and_edges\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[174], line 51\u001b[0m, in \u001b[0;36mpotential_nodes_and_edges\u001b[0;34m(data_dir, curr_scan_id, new_scan_id, frame_number)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(img_height):\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(img_width):\n\u001b[1;32m     50\u001b[0m         \u001b[38;5;66;03m#go only over the parts which have a change\u001b[39;00m\n\u001b[0;32m---> 51\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m new_global[i][j] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     52\u001b[0m             \u001b[38;5;66;03m#get the current of the frame\u001b[39;00m\n\u001b[1;32m     53\u001b[0m             affected_curr_nodes\u001b[38;5;241m.\u001b[39mappend(curr_obj)\n\u001b[1;32m     54\u001b[0m             affected_new_nodes\u001b[38;5;241m.\u001b[39mappend(new_obj)\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
    ],
