--- a/preprocessing/scan3r/boundingboxVisuals.ipynb
+++ b/preprocessing/scan3r/boundingboxVisuals.ipynb
@@ -9,16 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -49,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +128,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside\n"
+     ]
+    }
+   ],
+   "source": [
+    "scan_id = \"02b33dfb-be2b-2d54-92d2-cd012b2b3c40\"\n",
+    "data_dir = '/local/home/ekoller/R3Scan'\n",
+    "frame_id = \"000002\"\n",
+    "bounding_boxes = [] \n",
+    "json_bounding_box = osp.join(data_dir, 'scenes', scan_id, 'semseg.v2.json')\n",
+    "with open(json_bounding_box, 'r') as file:\n",
+    "            data = json.load(file)\n",
+    "\n",
+    "            for object in data['segGroups']:\n",
+    "                #get the current id\n",
+    "                if object[\"objectId\"] == 3:\n",
+    "                    print(\"inside\")\n",
+    "                    # the axes lengths give the length in each direction of one axis -> from centroid we have to move in \n",
+    "                    # both  directions of x in + and -\n",
+    "                    axes_lengths = object['obb']['axesLengths']\n",
+    "\n",
+    "                    # the normaliyed axis are the directions in which the boundingbox points to in comparison to the coord system\n",
+    "                    #we can use them to create a transformationmatrix! every row is one of the vector\n",
+    "                    normalized_axes = object['obb'][\"normalizedAxes\"]\n",
+    "\n",
+    "                    #construct the matrix using collumnformat ( each vecor becomes a collumn based on 2d example)\n",
+    "                    matrix = np.reshape(normalized_axes, (3,3), order= \"F\")\n",
+    "\n",
+    "                    #compute the new axislengths\n",
+    "                    lengths = matrix.dot(axes_lengths)\n",
+    "                    \n",
+    "                    #the centriod of the object\n",
+    "                    centroid = object['obb'][\"centroid\"]\n",
+    "\n",
+    "                    # calculate the new points one time in + direction one time in -\n",
+    "                    # get half of the lengths to add in each direction\n",
+    "                    points = np.zeros\n",
+    "                    half_lengths = lengths / 2.0\n",
+    "\n",
+    "                    #not pretty bus shows clearly where it is going looks like the following BT/Illustrations\n",
+    "                    corners = np.array([\n",
+    "                    centroid + np.array([+1, +1, -1]) * half_lengths, #1\n",
+    "                    centroid + np.array([-1, +1, -1]) * half_lengths, #5\n",
+    "                    centroid + np.array([-1, -1, -1]) * half_lengths, #7\n",
+    "                    centroid + np.array([+1, -1, -1]) * half_lengths, #3\n",
+    "                    centroid + np.array([+1, +1, +1]) * half_lengths, #0\n",
+    "                    centroid + np.array([-1, +1, +1]) * half_lengths, #4\n",
+    "                    centroid + np.array([-1, -1, +1]) * half_lengths, #6\n",
+    "                    centroid + np.array([+1, -1, +1]) * half_lengths, #2  \n",
+    "                    ])\n",
+    "                    #add the cornerarray of the object to the bounding box\n",
+    "                    bounding_boxes.append(corners)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -506,9 +566,15 @@
      "output_type": "stream",
      "text": [
       "object count: 25\n",
-      "object id length [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 20 22 23 26 27 28 29\n",
+      "object id length 25\n",
+      "obj ids pkl [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 20 22 23 26 27 28 29\n",
       " 30]\n",
-      "bounding_boxes 28\n",
+      "bounding_boxes 25\n",
+      "length of obj2idx 25\n",
+      "obj2idx {1: 0, 2: 1, 3: 2, 4: 3, 5: 4, 6: 5, 7: 6, 8: 7, 9: 8, 10: 9, 11: 10, 12: 11, 13: 12, 14: 13, 15: 14, 16: 15, 17: 16, 20: 17, 22: 18, 23: 19, 26: 20, 27: 21, 28: 22, 29: 23, 30: 24}\n",
+      " uniquobj labels used for ray intersection length 29\n",
+      "unique obj id ray intersection [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 20 21 22 23 24 25\n",
+      " 26 27 28 29 30]\n",
       "all ids length 28 values [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 20, 21, 22, 23, 24, 25, 26, 28, 29, 30, 27]\n",
       "remove ids length 3 values [21, 24, 25]\n",
       "bounding_boxes [array([[ 0.93681313,  1.19776025, -1.42585999],\n",
@@ -637,14 +703,7 @@
       "       [-1.19249472,  0.67503703,  0.57000001],\n",
       "       [-0.87024018,  0.67503703,  0.57000001],\n",
       "       [-0.87024018, -0.2379563 ,  0.57000001],\n",
-      "       [-1.19249472, -0.2379563 ,  0.57000001]]), array([[-0.77372128, -0.33618683, -0.42999997],\n",
-      "       [-0.60957258, -0.33618683, -0.42999997],\n",
-      "       [-0.60957258, -0.67390498, -0.42999997],\n",
-      "       [-0.77372128, -0.67390498, -0.42999997],\n",
-      "       [-0.77372128, -0.33618683, -0.18999997],\n",
-      "       [-0.60957258, -0.33618683, -0.18999997],\n",
-      "       [-0.60957258, -0.67390498, -0.18999997],\n",
-      "       [-0.77372128, -0.67390498, -0.18999997]]), array([[-0.444354  , -1.04806231, -0.31667298],\n",
+      "       [-1.19249472, -0.2379563 ,  0.57000001]]), array([[-0.444354  , -1.04806231, -0.31667298],\n",
       "       [-0.39625506, -1.04806231, -0.31667298],\n",
       "       [-0.39625506, -1.41913909, -0.31667298],\n",
       "       [-0.444354  , -1.41913909, -0.31667298],\n",
@@ -658,28 +717,21 @@
       "       [-0.56633604, -0.08671091, -0.84607096],\n",
       "       [-0.85376138, -0.08671091, -0.84607096],\n",
       "       [-0.85376138, -0.3294987 , -0.84607096],\n",
-      "       [-0.56633604, -0.3294987 , -0.84607096]]), array([[ 1.26049993, -0.76090894, -0.82999994],\n",
-      "       [ 1.11799956, -0.76090894, -0.82999994],\n",
-      "       [ 1.11799956, -0.87399772, -0.82999994],\n",
-      "       [ 1.26049993, -0.87399772, -0.82999994],\n",
-      "       [ 1.26049993, -0.76090894, -0.62999996],\n",
-      "       [ 1.11799956, -0.76090894, -0.62999996],\n",
-      "       [ 1.11799956, -0.87399772, -0.62999996],\n",
-      "       [ 1.26049993, -0.87399772, -0.62999996]]), array([[ 0.94963111, -0.27841361, -0.82999994],\n",
-      "       [ 0.86558655, -0.27841361, -0.82999994],\n",
-      "       [ 0.86558655, -0.24717615, -0.82999994],\n",
-      "       [ 0.94963111, -0.24717615, -0.82999994],\n",
-      "       [ 0.94963111, -0.27841361, -0.66999998],\n",
-      "       [ 0.86558655, -0.27841361, -0.66999998],\n",
-      "       [ 0.86558655, -0.24717615, -0.66999998],\n",
-      "       [ 0.94963111, -0.24717615, -0.66999998]]), array([[ 0.57864996, -0.13777066, -0.52917799],\n",
+      "       [-0.56633604, -0.3294987 , -0.84607096]]), array([[ 0.57864996, -0.13777066, -0.52917799],\n",
       "       [ 0.48999998, -0.13777066, -0.52917799],\n",
       "       [ 0.48999998,  0.19020099, -0.52917799],\n",
       "       [ 0.57864996,  0.19020099, -0.52917799],\n",
       "       [ 0.57864996, -0.13777066, -0.34040796],\n",
       "       [ 0.48999998, -0.13777066, -0.34040796],\n",
       "       [ 0.48999998,  0.19020099, -0.34040796],\n",
-      "       [ 0.57864996,  0.19020099, -0.34040796]]), array([[-0.33652735, -0.78396666, -1.39672   ],\n",
+      "       [ 0.57864996,  0.19020099, -0.34040796]]), array([[-0.47896109, -0.16934552, -1.39475996],\n",
+      "       [-0.8790032 , -0.16934552, -1.39475996],\n",
+      "       [-0.8790032 , -0.36940048, -1.39475996],\n",
+      "       [-0.47896109, -0.36940048, -1.39475996],\n",
+      "       [-0.47896109, -0.16934552, -1.18406994],\n",
+      "       [-0.8790032 , -0.16934552, -1.18406994],\n",
+      "       [-0.8790032 , -0.36940048, -1.18406994],\n",
+      "       [-0.47896109, -0.36940048, -1.18406994]]), array([[-0.33652735, -0.78396666, -1.39672   ],\n",
       "       [-0.57102158, -0.78396666, -1.39672   ],\n",
       "       [-0.57102158, -0.82674074, -1.39672   ],\n",
       "       [-0.33652735, -0.82674074, -1.39672   ],\n",
@@ -700,14 +752,7 @@
       "       [-0.063222  ,  0.92630155, -1.32105989],\n",
       "       [-0.56829037,  0.92630155, -1.32105989],\n",
       "       [-0.56829037,  0.74898605, -1.32105989],\n",
-      "       [-0.063222  ,  0.74898605, -1.32105989]]), array([[-0.47896109, -0.16934552, -1.39475996],\n",
-      "       [-0.8790032 , -0.16934552, -1.39475996],\n",
-      "       [-0.8790032 , -0.36940048, -1.39475996],\n",
-      "       [-0.47896109, -0.36940048, -1.39475996],\n",
-      "       [-0.47896109, -0.16934552, -1.18406994],\n",
-      "       [-0.8790032 , -0.16934552, -1.18406994],\n",
-      "       [-0.8790032 , -0.36940048, -1.18406994],\n",
-      "       [-0.47896109, -0.36940048, -1.18406994]])]\n"
+      "       [-0.063222  ,  0.74898605, -1.32105989]])]\n"
      ]
     }
    ],
@@ -731,10 +776,22 @@
     "   \n",
     "    obj_count = data['objects_count']\n",
     "    obj_id = data['objects_id']\n",
+    "    obj2idx = data['object_id2idx']\n",
     "\n",
     "    print(\"object count:\", obj_count)\n",
-    "    print(\"object id length\", obj_id)\n",
+    "    print(\"object id length\", len(obj_id))\n",
+    "    print(\"obj ids pkl\", obj_id)\n",
     "    print(\"bounding_boxes\", len(bounding_boxes))\n",
+    "    print(\"length of obj2idx\", len(obj2idx))\n",
+    "    print(\"obj2idx\", obj2idx)\n",
+    "\n",
+    "\n",
+    "    plydata_npy = np.load(osp.join(data_dir,\"scenes\", scan_id, \"data.npy\"))\n",
+    "    obj_labels = plydata_npy['objectId']\n",
+    "    unique_obj_labels = np.unique(obj_labels)\n",
+    "\n",
+    "    print(\" uniquobj labels used for ray intersection length\", len(unique_obj_labels))\n",
+    "    print(\"unique obj id ray intersection\", unique_obj_labels)\n",
     "\n",
     "    #test for different ids\n",
     "    all_ids = []\n",
